Fixed the content overflow by adding scrollbars where necessary

--- a/src/styles.css
+++ b/src/styles.css
@@ -298,7 +298,8 @@ img {
 	display: flex;
 	flex: 1 1 auto;
 	justify-content: center;
-	width: 100%;
+  width: 100%;
+  overflow-y: auto;
 }
 
 .event-content {
